--- a/css/about.css
+++ b/css/about.css
@@ -34,17 +34,21 @@ header>div:nth-child(3)>span>a{
     font-weight: bold;
 }
 
-
-
-
-
-
-
-
-
-
-
-
+main{
+    background-color: antiquewhite;
+    padding: 15px;
+    margin-top: 20px;
+}
+main>div>p:first-child{
+    color: #a0694a;
+}
+main>div>div>p:nth-child(1){
+    color: #FEECE2;
+    background-color: #e45e5c;
+    border-radius: 5px;
+    border: 2px solid #0a0a0a;
+    padding: 15px;
+}
 
 footer {
     padding: 50px;
@@ -62,7 +66,7 @@ footer>div{
 footer span{
     margin-left: 40px;
 }
-footer>div>span:first-child{
+footer>div>span:nth-child(3){
     color: #def10e;
     font-size: 25px;
 }
